--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-"hello, world!" 
+---
+layout: default
+title: Eddie the sheep
+---
+<<div class="blurb">
+	<h1>Hi there, I'm Eddie the sheep!</h1>
+	<p>I'm starred at the <em>"Sing" the movie!</em> Awesome. <a href="/about">Read more about me</a></p>
+</div><!-- /.blurb -->
